# Call-Order-App

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/callorderapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  callorderapp.cpp  native-lib.cpp
app/src/main/java/com/example/callorderapp/: MainActivity.kt  NativeBridge.kt
app/src/main/java/com/example/callorderapp/audio/: AudioRecorderManager.kt  WavUtil.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/callorderapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
